--- a/index.html
+++ b/index.html
@@ -17,36 +17,36 @@
       <table>
 
         <tr>
-          <td><button>C</button></td>
-          <td><button>&lt;</button></td>
-          <td><button>/</button></td>
-          <td><button>X</button></td>
+          <td><button onclick="clean()">C</button></td>
+          <td><button onclick="back()">&lt;</button></td>
+          <td><button onclick="insert('/')">/</button></td>
+          <td><button onclick="insert('x')">X</button></td>
         </tr>
 
         <tr>
           <td><button onclick="insert('7')">7</button></td>
           <td><button onclick="insert('8')">8</button></td>
           <td><button onclick="insert('9')">9</button></td>
-          <td><button>-</button></td>
+          <td><button onclick="insert('-')">-</button></td>
         </tr>
 
         <tr>
           <td><button onclick="insert('4')">4</button></td>
           <td><button onclick="insert('5')">5</button></td>
           <td><button onclick="insert('6')">6</button></td>
-          <td><button>+</button></td>
+          <td><button onclick="insert('+')">+</button></td>
         </tr>
 
         <tr>
           <td><button onclick="insert('1')">1</button></td>
           <td><button onclick="insert('2')">2</button></td>
           <td><button onclick="insert('3')">3</button></td>
-          <td rowspan="2" id="altu"><button style="height: 102px;">=</button></td>
+          <td rowspan="2" id="altu"><button style="height: 102px;" onclick="calcular()">=</button></td>
         </tr>
 
         <tr>
           <td colspan="2"><button style="width: 102px;" onclick="insert('0')">0</button></td>
-          <td><button>.</button></td>
+          <td><button onclick="insert('.')">.</button></td>
         </tr>
 
       </table>
